<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:columnCount="2"
    android:rowCount="7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gaspriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:padding="@dimen/textViewPadding"
        android:text="@string/gasolinaText"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/gasolinaSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:max="100"
        android:padding="@dimen/seekBarPadding"
        android:progress="50" />

    <TextView
        android:id="@+id/ethanolPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:padding="@dimen/textViewPadding"
        android:text="@string/etanolText"
        android:textAlignment="center"
        android:textColor="@color/colorText" />

    <SeekBar
        android:id="@+id/ethanolSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:max="100"
        android:padding="@dimen/seekBarPadding"
        android:progress="50" />

    <TextView
        android:id="@+id/itsBetterToUseTextView"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginStart="@dimen/seekBarPadding"
        android:padding="@dimen/textViewPadding"

        android:text="@string/eMelhorUsar"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/respostaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:padding="@dimen/recotextViewPadding"
        android:text="@string/recomendationTextGasolina"
        android:textColor="@color/colorText"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="269dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:contentDescription="@string/imageDescrption"
        android:padding="@dimen/imagePadding"
        app:srcCompat="@drawable/gasolina" />


</GridLayout>